@@ -2,13 +2,13 @@
 package edu.colorado.phet.beerslawlab.view;
 
 import java.awt.geom.Point2D;
+import java.awt.geom.Rectangle2D;
 
 import edu.colorado.phet.beerslawlab.BLLSimSharing.Parameters;
 import edu.colorado.phet.beerslawlab.model.Movable;
 import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
 import edu.colorado.phet.common.phetcommon.simsharing.Parameter;
 import edu.colorado.phet.common.phetcommon.simsharing.SimSharingManager;
-import edu.colorado.phet.common.phetcommon.util.function.Function1;
 import edu.colorado.phet.common.piccolophet.simsharing.SimSharingDragSequenceEventHandler;
 import edu.umd.cs.piccolo.PNode;
 import edu.umd.cs.piccolo.event.PInputEvent;
@@ -23,12 +23,12 @@ public class MovableDragHandler extends SimSharingDragSequenceEventHandler {
     private final Movable movable;
     private final PNode dragNode;
     private double clickXOffset, clickYOffset; // offset of mouse click from dragNode's origin, in parent's coordinate frame
-    private Function1<ImmutableVector2D, ImmutableVector2D> constrainDragFunction;
+    private final Rectangle2D dragBounds;
 
-    public MovableDragHandler( final String simSharingObject, final Movable movable, PNode dragNode, Function1<ImmutableVector2D, ImmutableVector2D> constrainDragFunction ) {
+    public MovableDragHandler( final String simSharingObject, final Movable movable, PNode dragNode, Rectangle2D dragBounds ) {
         this.movable = movable;
         this.dragNode = dragNode;
-        this.constrainDragFunction = constrainDragFunction;
+        this.dragBounds = dragBounds;
         // sim-sharing
         setStartEndDragFunction( new DragFunction() {
             public void apply( String action, Parameter xParameter, Parameter yParameter, PInputEvent event ) {
@@ -52,6 +52,19 @@ public class MovableDragHandler extends SimSharingDragSequenceEventHandler {
         double x = pMouse.getX() - clickXOffset;
         double y = pMouse.getY() - clickYOffset;
         //TODO assumes a 1:1 model-view transform
-        movable.location.set( constrainDragFunction.apply( new ImmutableVector2D( x, y ) ) );
+        movable.location.set( constraintToBounds( x, y, dragBounds ) );
+    }
+
+    private static ImmutableVector2D constraintToBounds( double x, double y, Rectangle2D bounds ) {
+        ImmutableVector2D vConstrained;
+        if ( bounds != null && !bounds.contains( x, y ) ) {
+            double xConstrained = Math.max( Math.min( x, bounds.getMaxX() ), bounds.getX() );
+            double yConstrained = Math.max( Math.min( y, bounds.getMaxY() ), bounds.getY() );
+            vConstrained = new ImmutableVector2D( xConstrained, yConstrained );
+        }
+        else {
+            vConstrained = new ImmutableVector2D( x, y );
+        }
+        return vConstrained;
     }
 }
